# deepchecks

./: .all-contributorsrc  .gitattributes  .gitignore  .licenserc_fix.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  ABOUT.rst  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DESCRIPTION.rst  FAQ.md  FAQ.rst  LICENSE  MANIFEST.in  Makefile_Linux  Makefile_Windows  README.md  README.rst  README.zh-cn.md  VERSION  about.RST  add_a_custom_check.ipynb  configure_check_conditions.ipynb  deepchecks_recsys_quickstart.ipynb  deepchecks_recsys_quickstart2.ipynb  fasttext-0.9.2-cp311-cp311-win_amd64.whl  how to conditions.ipynb  index.json  info.json  liccheck.ini  makefile  makefile.linux  makefile.windows  mytest.py  pyproject.toml  readthedocs.yaml  (+9 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.yml
.github/scripts/: benchmark-history.sh  benchmark.sh  examples_validation.py  push_docs.sh  update_notebooks.sh  update_version.sh
.github/workflows/: auto-merge-dependabot.yml  benchmark-history.yml  benchmark.yml  build.yml  ci.yml  code-checks.yml  codecov.yml  codeql-analysis.yml  conda_publish.yml  docs-generation.yml  docs.yaml  documentation.yaml  label-new-issue.yml  link-check.yaml  lint.yml  main.yml  nb-generation.yml  new-build.yml  pr.yaml  publish.yml  pydocstyle.yml  release.yml  test.yml
benchmarks/: asv.conf.json  benchmarks.py  tabular_bench.py  vision_bench.py
benchmarks/tabular/: asv.conf.json  benchmarks.py
benchmarks/vision/: benchmarks.py
ci/: Jenkinsfile
conda-recipe/: build.sh  meta.yaml
core/: setup.py
deepchecks/: .projectignore  __init__.py  checks.py  datasets.py  deepchecks_recsys_quickstart2.ipynb  errors.py  feature_importance_utils.py  matan_test.py  metric_utils.py  models.py  mytest.py  plot_utils.py  ppscore.py  string_utils.py  suites.py  swindler_detection  utils.py  version.py
deepchecks-all/: setup.py
deepchecks/analytics/: __init__.py  anonymous_analytics_tracking.py  anonymous_telemetry.py  utils.py
deepchecks/base/: __init__.py  base.css  check.py  check_context.py  condition.py  dataframe_utils.py  dataset.py  display_pandas.py  display_suite.py  model_wrapper.py  suite.py  suite_output.html
deepchecks/checks/: __init__.py
deepchecks/cli/: __init__.py  cli.py  telemetry.py
deepchecks/core/: __init__.py  check.py  check_json.py  check_result.py  checks.py  common.py  condition.py  context.py  display.py  display_pandas.py  display_suite.py  errors.py  evaluation_utils.py  fix_classes.py  reduce_classes.py  suite.py  task_type.py
deepchecks/datasets/: __init__.py  avocado.py
deepchecks/monitoring/: client.py
deepchecks/nlp/: __init__.py  _shared_docs.py  base_checks.py  context.py  dataset.py  input_validations.py  suite.py  task_type.py  temp.py  text_data.py
deepchecks/recommender/: BaseRun.py  __init__.py  context.py  dataset.py  ranking.py  suites.py
deepchecks/suites/: README.md  README.rst  __init__.py  default_suites.py  distribution.py  distribution_suite.py  drift_suite.py  integrity_suite.py  leakage_suite.py  methodology_suite.py  overall.py  overall_suite.py  overfit_suite.py  performance_suite.py
deepchecks/swindler-detection/: README.rst
deepchecks/swindler_detection/: README.rst
deepchecks/tabular/: __init__.py  _shared_docs.py  base.py  base_checks.py  context.py  dataset.py  deprecation_warnings.py  feature_importance.py  metrics.py  model_base.py  suite.py  user_utils.py
deepchecks/utils/: __init__.py  array_math.py  array_utils.py  builtin_datasets_utils.py  correlation_methods.py  dataframes.py  decorators.py  deprecation.py  dict_funcs.py  display.py  docref.py  features.py  function.py  gower_distance.py  gpu_utils.py  html.py  ipython.py  itertools.py  json_utils.py  logger.py  metrics.py  model.py  models.py  numbers.py  other.py  outliers.py  plot.py  simple_models.py  single_sample_metrics.py  strings.py  timer.py  type_inference.py  typing.py  (+2 more)
demo/: README.rst  avocado_dataset_utils.py  deepchecks-wandb.ipynb
demos/: dimensions_check.py  mask detection.ipynb  masks_utils.py  performance_report.py  robustness_check.py  suspicious_robustness.py  test.py
docs/: .lycheeignore  Makefile  conf.py  index.rst  requirements.txt  sel.py
examples/: README.rst  custom_check.ipynb  examples_metrics_guide.py  examples_supported_models.py  how to conditions.ipynb
extensive_testing/: requirements_extensive-tests.txt  run_extensive_tests.py
mlchecks/: __init__.py  base.py  decisions.py  display.py  example  feature_importance_utils.py  matn.py  metric_utils.py  plot_utils.py  ppscore.py  string_utils.py  utils.py
mlchecks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: .nbval-sanitizer  Index Leakage.ipynb  README.md  String mismatch.ipynb  boosting_overfit.ipynb  calibration_metric.ipynb  category_mismatch.ipynb  columns_info.ipynb  confidence_change.ipynb  data_duplicats.ipynb  data_sample_leakage.ipynb  dataset_drift.ipynb  dataset_info.ipynb  date_leakage.ipynb  dominant_frequency_change.ipynb  feature_importance.ipynb  identifier_leakage.ipynb  index_leakage.ipynb  invalid_chars.ipynb  is_single_value.ipynb  mixed_nulls.ipynb  mixed_types.ipynb  model_info.ipynb  naive_comparision.ipynb  naive_model_comparison.ipynb  new_category.ipynb  new_label.ipynb  performance_overfit.ipynb  rare_format_detection.ipynb  segment_performance.ipynb  single_feature_contribution.ipynb  special_characters.ipynb  string_length_out_of_bounds.ipynb  string_length_outlier.ipynb  string_mismatch.ipynb  string_mismatch_comparison.ipynb
requirements/: dev-nlp-requirements.txt  dev-requirements.txt  mon-requirements.txt  nlp-prop-requirements.txt  nlp-requirements.txt  requirements.txt  rtd-requirements.txt  vision-requirements.txt
tabular/: setup.py
tests/: __init__.py  common.py  conftest.py  examples_validation.py  vision_conftest.py
usage_notebooks/: MLChecks_demo-Suites.ipynb  MLChecks_demo_#1.ipynb
vision/: setup.py
(+3072 files in other folders)
